--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "concurrently \"tsc -w\" \"nodemon dist/index.js\"",
-		"start": "nodemon dist/index.js"
+		"start": "node dist/index.js"
 	},
 	"keywords": [],
 	"author": "",
