--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 SECRET_KEY=any_1Tokeng1_4can_BeUseful1
 DB_CONNECTION=mongodb+srv://dbAlejandro:ecommerce@cluster0.yknr9.mongodb.net/products
+CLOUDINARY_CLOUD_NAME=dtkzuhvwo
+CLOUDINARY_API_KEY=892333632115622
+CLOUDINARY_SECRET=v1IB81KTlmutLTypqUGtfwGAa3g
