--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@types/jsonwebtoken": "^8.5.0",
 		"@types/multer": "^1.4.4",
 		"bcryptjs": "^2.4.3",
+		"cloudinary": "^1.23.0",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"express-validator": "^6.6.1",
