--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@types/multer": "^1.4.4",
 		"bcryptjs": "^2.4.3",
 		"cloudinary": "^1.23.0",
+		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"express-validator": "^6.6.1",
