--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"mongoose": "^5.10.13",
 		"morgan": "^1.10.0",
 		"multer": "^1.4.2",
+		"stripe": "^8.137.0",
 		"typescript": "^4.0.5"
 	},
 	"devDependencies": {
